Feat: GUI 설정 및 구현 (회원 가입 + 조회)